博客分类的增删改查
2018-1-14 22:48:28

--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>前端圈后台管理系统</title>
+    <title>FO前端技术栈 - 后台管理系统</title>
     <link rel="stylesheet" type="text/css" href="/public/bootstrap-theme.min.css" />
     <link rel="stylesheet" type="text/css" href="/public/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/public/fo.css" />
