--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -2,6 +2,6 @@
 
 
 {% block main %}
-<h1>Hello, {{ userinfo.username }}</h1>
+<h1>Hello, {{ userInfo.username }}</h1>
 <p>欢迎进入后台管理页面</p>
 {% endblock %}
