--- a/views/main/layout.html
+++ b/views/main/layout.html
@@ -23,12 +23,12 @@
             </div>
             <div>
                 <ul class="nav navbar-nav">
-                    {% for cate in categories %}
+                    {% for category in categories %}
                     <li>
-                        {% if category == cate.id %}
-                        <a href="/?category={{cate.id}}" class="focus">{{cate.name}}</a>
+                        {% if category == category.id %}
+                        <a href="/?category={{category.id}}" class="focus">{{category.name}}</a>
                         {% else %}
-                        <a href="/?category={{cate.id}}">{{cate.name}}</a>
+                        <a href="/?category={{category.id}}">{{category.name}}</a>
                         {% endif %}
                     </li>
                     {% endfor %}
