--- a/views/admin/content_edit.html
+++ b/views/admin/content_edit.html
@@ -9,7 +9,7 @@
 
 
 
-<form action="/admin/content/add" method="post">
+<form method="post">
     <div class="form-group">
         分类{{content.category._id.toString()}}
         <select name="category" id="category" class="form-control">
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group">
         标题
-        <input type="text" value='{{content.title}}'class="form-control" name="title" placeholder="请输入标题">
+        <input type="text" value='{{content.title}}' class="form-control" name="title" placeholder="请输入标题">
     </div>
     <div class="form-group">
         简介
