内容详情页展示/阅读数/内容评论实现

--- a/public/main.css
+++ b/public/main.css
@@ -119,8 +119,8 @@ li{
     text-decoration: none;
 }
 
-.title-info span b{
-    color:#3879D9;
+.title-info span b,.articleWrap span b{
+    color:#3CB5D4;
     font-weight: normal;
 }
 
